// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpParams Error if both in:formData and in:body 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation parameters are unique and non-repeating.",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "range": Object {
      "end": Object {
        "character": 25,
        "line": 11,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if multiple in:body 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation parameters are unique and non-repeating.",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "range": Object {
      "end": Object {
        "character": 25,
        "line": 11,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if non-unique $ref param on same operation 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation parameters are unique and non-repeating.",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "range": Object {
      "end": Object {
        "character": 44,
        "line": 12,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if non-unique param on same operation 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation parameters are unique and non-repeating.",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "range": Object {
      "end": Object {
        "character": 25,
        "line": 15,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;
